实现代码生成器